@@ -1,3 +1,9 @@
+2008-05-29  Ben Van Mechelen  <me@benvm.be>
+
+	* plugins/dtc_clearer/dtc_clearer.py:
+	    Implement start and stop methods
+	
+
 2008-05-20  Ben Van Mechelen  <me@benvm.be>
 
 	* garmon/obd_device.py:
